--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,17 @@
-test
+/test
 .gitignore
 package-lock.json
 .github
 babel.config.cjs
+
+/coverage
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
